Fixed Tooltip Layout Bug

--- a/Frontend/src/jam/cards/Card.css
+++ b/Frontend/src/jam/cards/Card.css
@@ -5,12 +5,15 @@
     text-align: center;
     position: relative;
 
-    overflow-x: hidden;
     padding: 1em;
     border-radius: 25px;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.25);
     background: var(--background-color);
     min-height: 5rem;
+}
+
+.chart-card{
+    overflow-x: hidden;
 }
 
 .chart {
