--- a/Frontend/src/jam/cards/ToolTip.css
+++ b/Frontend/src/jam/cards/ToolTip.css
@@ -36,6 +36,12 @@
   hyphens: auto;
 }
 
+@media (max-width: 800px) {
+  .tooltip-text{
+    right: 100%;
+  }
+}
+
 .tooltip-icon:hover .tooltip-text{
   visibility: visible;
   opacity: 1;
